# trellm

./: .gitignore  CLAUDE.md  DESIGN.md  PRD.md  README.md  config.yaml.example  pyproject.toml  run.sh  start-trellm.sh  systemd-install.sh  trellm.service
.claude/commands/: create-project.md
docs/: browser-stack.md  claude-interactive.md  dashboard-ux-handoff.md  m5-poc-runbook.md  patchright-mcp.md  prd-web-dashboard.md
frontend/: .env.example  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/types/: index.ts
scripts/: needs-browser-stack.py  process_icon.py  setup-browser.sh  start-browser.sh  trellm-stop-hook.sh
tests/: __init__.py  test_browser_scripts.py  test_claude.py  test_claude_md.py  test_completion.py  test_config.py  test_icon_utils.py  test_interactive_session.py  test_main.py  test_maintenance.py  test_session.py  test_start_script.py  test_start_trellm.py  test_state.py  test_systemd.py  test_tmux.py  test_web.py
trellm/: __init__.py  __main__.py  claude.py  completion.py  config.py  icon_utils.py  maintenance.py  session.py  state.py  tmux.py  trello.py
trellm/web/: __init__.py  server.py
trellm/web/static/: app.js  index.html  manifest.webmanifest  pull-to-refresh.js  style.css
